crates/aion-awl/tests/fixtures/rev2/header-types/valid/noncanonical_commas.awl
//! Non-canonical commas: the parser tolerates them and fmt normalizes them.
workflow comma_tolerance
  input id: String
  outcome recorded: type Receipt, route success

type Ledger {
  id: String
  entries: [String]
}

type Receipt { id: String, ledger: Ledger, }

worker bookkeeper
  action record(id: String) -> Receipt

step record
  id |> record |> route recorded
