crates/aion-awl/tests/fixtures/rev2/header-types/invalid/no_outcomes.awl
//! Ping a host and report its status.
workflow ping_host
  input host: String

type Status { host: String, alive: Bool }

worker ping
  action check(host: String) -> Status

step check_host
  host |> check |> route reported
